[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation module"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "rhssayn"},
    {name = "mlakhlil"}
]

[tool.setuptools.packages.find]
where = ["."]
